@@ -1,7 +1,29 @@
 /*
- * Copyright (C) 2012 United States Government as represented by the Administrator of the
- * National Aeronautics and Space Administration.
- * All Rights Reserved.
+ * Copyright 2006-2009, 2017, 2020 United States Government, as represented by the
+ * Administrator of the National Aeronautics and Space Administration.
+ * All rights reserved.
+ * 
+ * The NASA World Wind Java (WWJ) platform is licensed under the Apache License,
+ * Version 2.0 (the "License"); you may not use this file except in compliance
+ * with the License. You may obtain a copy of the License at
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software distributed
+ * under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+ * CONDITIONS OF ANY KIND, either express or implied. See the License for the
+ * specific language governing permissions and limitations under the License.
+ * 
+ * NASA World Wind Java (WWJ) also contains the following 3rd party Open Source
+ * software:
+ * 
+ *     Jackson Parser – Licensed under Apache 2.0
+ *     GDAL – Licensed under MIT
+ *     JOGL – Licensed under  Berkeley Software Distribution (BSD)
+ *     Gluegen – Licensed under Berkeley Software Distribution (BSD)
+ * 
+ * A complete listing of 3rd Party software notices and licenses included in
+ * NASA World Wind Java (WWJ)  can be found in the WorldWindJava-v2.2 3rd-party
+ * notices and licenses PDF found in code directory.
  */
 package gov.nasa.worldwindx.examples;
 
@@ -24,17 +46,16 @@ import java.awt.*;
  *
  * @version $Id: ApplicationTemplate.java 2115 2014-07-01 17:58:16Z tgaskins $
  */
-public class ApplicationTemplate
-{
-    public static class AppPanel extends JPanel
-    {
+public class ApplicationTemplate {
+
+    public static class AppPanel extends JPanel {
+
         protected WorldWindow wwd;
         protected StatusBar statusBar;
         protected ToolTipController toolTipController;
         protected HighlightController highlightController;
 
-        public AppPanel(Dimension canvasSize, boolean includeStatusBar)
-        {
+        public AppPanel(Dimension canvasSize, boolean includeStatusBar) {
             super(new BorderLayout());
 
             this.wwd = this.createWorldWindow();
@@ -48,8 +69,7 @@ public class ApplicationTemplate
             this.wwd.addSelectListener(new ClickAndGoSelectListener(this.getWwd(), WorldMapLayer.class));
 
             this.add((Component) this.wwd, BorderLayout.CENTER);
-            if (includeStatusBar)
-            {
+            if (includeStatusBar) {
                 this.statusBar = new StatusBar();
                 this.add(statusBar, BorderLayout.PAGE_END);
                 this.statusBar.setEventSource(wwd);
@@ -60,24 +80,21 @@ public class ApplicationTemplate
             this.highlightController = new HighlightController(this.getWwd(), SelectEvent.ROLLOVER);
         }
 
-        protected WorldWindow createWorldWindow()
-        {
+        protected WorldWindow createWorldWindow() {
             return new WorldWindowGLCanvas();
         }
 
-        public WorldWindow getWwd()
-        {
+        public WorldWindow getWwd() {
             return wwd;
         }
 
-        public StatusBar getStatusBar()
-        {
+        public StatusBar getStatusBar() {
             return statusBar;
         }
     }
 
-    protected static class AppFrame extends JFrame
-    {
+    protected static class AppFrame extends JFrame {
+
         private Dimension canvasSize = new Dimension(1000, 800);
 
         protected AppPanel wwjPanel;
@@ -85,32 +102,27 @@ public class ApplicationTemplate
         protected LayerPanel layerPanel;
         protected StatisticsPanel statsPanel;
 
-        public AppFrame()
-        {
+        public AppFrame() {
             this.initialize(true, true, false);
         }
 
-        public AppFrame(Dimension size)
-        {
+        public AppFrame(Dimension size) {
             this.canvasSize = size;
             this.initialize(true, true, false);
         }
 
-        public AppFrame(boolean includeStatusBar, boolean includeLayerPanel, boolean includeStatsPanel)
-        {
+        public AppFrame(boolean includeStatusBar, boolean includeLayerPanel, boolean includeStatsPanel) {
             this.initialize(includeStatusBar, includeLayerPanel, includeStatsPanel);
         }
 
-        protected void initialize(boolean includeStatusBar, boolean includeLayerPanel, boolean includeStatsPanel)
-        {
+        protected void initialize(boolean includeStatusBar, boolean includeLayerPanel, boolean includeStatsPanel) {
             // Create the WorldWindow.
             this.wwjPanel = this.createAppPanel(this.canvasSize, includeStatusBar);
             this.wwjPanel.setPreferredSize(canvasSize);
 
             // Put the pieces together.
             this.getContentPane().add(wwjPanel, BorderLayout.CENTER);
-            if (includeLayerPanel)
-            {
+            if (includeLayerPanel) {
                 this.controlPanel = new JPanel(new BorderLayout(10, 10));
                 this.layerPanel = new LayerPanel(this.getWwd());
                 this.controlPanel.add(this.layerPanel, BorderLayout.CENTER);
@@ -118,8 +130,7 @@ public class ApplicationTemplate
                 this.getContentPane().add(this.controlPanel, BorderLayout.WEST);
             }
 
-            if (includeStatsPanel || System.getProperty("gov.nasa.worldwind.showStatistics") != null)
-            {
+            if (includeStatsPanel || System.getProperty("gov.nasa.worldwind.showStatistics") != null) {
                 this.statsPanel = new StatisticsPanel(this.wwjPanel.getWwd(), new Dimension(250, canvasSize.height));
                 this.getContentPane().add(this.statsPanel, BorderLayout.EAST);
             }
@@ -130,30 +141,23 @@ public class ApplicationTemplate
             this.getWwd().addSelectListener(new ViewControlsSelectListener(this.getWwd(), viewControlsLayer));
 
             // Register a rendering exception listener that's notified when exceptions occur during rendering.
-            this.wwjPanel.getWwd().addRenderingExceptionListener(new RenderingExceptionListener()
-            {
-                public void exceptionThrown(Throwable t)
-                {
-                    if (t instanceof WWAbsentRequirementException)
-                    {
-                        String message = "Computer does not meet minimum graphics requirements.\n";
-                        message += "Please install up-to-date graphics driver and try again.\n";
-                        message += "Reason: " + t.getMessage() + "\n";
-                        message += "This program will end when you press OK.";
+            this.wwjPanel.getWwd().addRenderingExceptionListener((Throwable t) -> {
+                if (t instanceof WWAbsentRequirementException) {
+                    String message = "Computer does not meet minimum graphics requirements.\n";
+                    message += "Please install up-to-date graphics driver and try again.\n";
+                    message += "Reason: " + t.getMessage() + "\n";
+                    message += "This program will end when you press OK.";
 
-                        JOptionPane.showMessageDialog(AppFrame.this, message, "Unable to Start Program",
+                    JOptionPane.showMessageDialog(AppFrame.this, message, "Unable to Start Program",
                             JOptionPane.ERROR_MESSAGE);
-                        System.exit(-1);
-                    }
+                    System.exit(-1);
                 }
             });
 
             // Search the layer list for layers that are also select listeners and register them with the World
             // Window. This enables interactive layers to be included without specific knowledge of them here.
-            for (Layer layer : this.wwjPanel.getWwd().getModel().getLayers())
-            {
-                if (layer instanceof SelectListener)
-                {
+            for (Layer layer : this.wwjPanel.getWwd().getModel().getLayers()) {
+                if (layer instanceof SelectListener) {
                     this.getWwd().addSelectListener((SelectListener) layer);
                 }
             }
@@ -165,28 +169,23 @@ public class ApplicationTemplate
             this.setResizable(true);
         }
 
-        protected AppPanel createAppPanel(Dimension canvasSize, boolean includeStatusBar)
-        {
+        protected AppPanel createAppPanel(Dimension canvasSize, boolean includeStatusBar) {
             return new AppPanel(canvasSize, includeStatusBar);
         }
 
-        public Dimension getCanvasSize()
-        {
+        public Dimension getCanvasSize() {
             return canvasSize;
         }
 
-        public AppPanel getWwjPanel()
-        {
+        public AppPanel getWwjPanel() {
             return wwjPanel;
         }
 
-        public WorldWindow getWwd()
-        {
+        public WorldWindow getWwd() {
             return this.wwjPanel.getWwd();
         }
 
-        public StatusBar getStatusBar()
-        {
+        public StatusBar getStatusBar() {
             return this.wwjPanel.getStatusBar();
         }
 
@@ -194,86 +193,78 @@ public class ApplicationTemplate
          * @deprecated Use getControlPanel instead.
          * @return This application's layer panel.
          */
-        public LayerPanel getLayerPanel()
-        {
+        @Deprecated
+        public LayerPanel getLayerPanel() {
             return this.layerPanel;
         }
 
-        public JPanel getControlPanel()
-        {
+        public JPanel getControlPanel() {
             return this.controlPanel;
         }
 
-        public StatisticsPanel getStatsPanel()
-        {
+        public StatisticsPanel getStatsPanel() {
             return statsPanel;
         }
 
-        public void setToolTipController(ToolTipController controller)
-        {
-            if (this.wwjPanel.toolTipController != null)
+        public void setToolTipController(ToolTipController controller) {
+            if (this.wwjPanel.toolTipController != null) {
                 this.wwjPanel.toolTipController.dispose();
+            }
 
             this.wwjPanel.toolTipController = controller;
         }
 
-        public void setHighlightController(HighlightController controller)
-        {
-            if (this.wwjPanel.highlightController != null)
+        public void setHighlightController(HighlightController controller) {
+            if (this.wwjPanel.highlightController != null) {
                 this.wwjPanel.highlightController.dispose();
+            }
 
             this.wwjPanel.highlightController = controller;
         }
     }
 
-    public static void insertBeforeCompass(WorldWindow wwd, Layer layer)
-    {
+    public static void insertBeforeCompass(WorldWindow wwd, Layer layer) {
         // Insert the layer into the layer list just before the compass.
         int compassPosition = 0;
         LayerList layers = wwd.getModel().getLayers();
-        for (Layer l : layers)
-        {
-            if (l instanceof CompassLayer)
+        for (Layer l : layers) {
+            if (l instanceof CompassLayer) {
                 compassPosition = layers.indexOf(l);
+            }
         }
         layers.add(compassPosition, layer);
     }
 
-    public static void insertBeforePlacenames(WorldWindow wwd, Layer layer)
-    {
+    public static void insertBeforePlacenames(WorldWindow wwd, Layer layer) {
         // Insert the layer into the layer list just before the placenames.
         int compassPosition = 0;
         LayerList layers = wwd.getModel().getLayers();
-        for (Layer l : layers)
-        {
-            if (l instanceof PlaceNameLayer)
+        for (Layer l : layers) {
+            if (l instanceof PlaceNameLayer) {
                 compassPosition = layers.indexOf(l);
+            }
         }
         layers.add(compassPosition, layer);
     }
 
-    public static void insertAfterPlacenames(WorldWindow wwd, Layer layer)
-    {
+    public static void insertAfterPlacenames(WorldWindow wwd, Layer layer) {
         // Insert the layer into the layer list just after the placenames.
         int compassPosition = 0;
         LayerList layers = wwd.getModel().getLayers();
-        for (Layer l : layers)
-        {
-            if (l instanceof PlaceNameLayer)
+        for (Layer l : layers) {
+            if (l instanceof PlaceNameLayer) {
                 compassPosition = layers.indexOf(l);
+            }
         }
         layers.add(compassPosition + 1, layer);
     }
 
-    public static void insertBeforeLayerName(WorldWindow wwd, Layer layer, String targetName)
-    {
+    public static void insertBeforeLayerName(WorldWindow wwd, Layer layer, String targetName) {
         // Insert the layer into the layer list just before the target layer.
         int targetPosition = 0;
         LayerList layers = wwd.getModel().getLayers();
-        for (Layer l : layers)
-        {
-            if (l.getName().indexOf(targetName) != -1)
-            {
+        for (Layer l : layers) {
+            if (l.getName().contains(targetName)) {
                 targetPosition = layers.indexOf(l);
                 break;
             }
@@ -281,53 +272,39 @@ public class ApplicationTemplate
         layers.add(targetPosition, layer);
     }
 
-    static
-    {
+    static {
         System.setProperty("java.net.useSystemProxies", "true");
-        if (Configuration.isMacOS())
-        {
+        if (Configuration.isMacOS()) {
             System.setProperty("apple.laf.useScreenMenuBar", "true");
             System.setProperty("com.apple.mrj.application.apple.menu.about.name", "WorldWind Application");
             System.setProperty("com.apple.mrj.application.growbox.intrudes", "false");
             System.setProperty("apple.awt.brushMetalLook", "true");
-        }
-        else if (Configuration.isWindowsOS())
-        {
+        } else if (Configuration.isWindowsOS()) {
             System.setProperty("sun.awt.noerasebackground", "true"); // prevents flashing during window resizing
         }
     }
 
-    public static AppFrame start(String appName, Class appFrameClass)
-    {
-        if (Configuration.isMacOS() && appName != null)
-        {
+    public static AppFrame start(String appName, Class<?> appFrameClass) {
+        if (Configuration.isMacOS() && appName != null) {
             System.setProperty("com.apple.mrj.application.apple.menu.about.name", appName);
         }
 
-        try
-        {
-            final AppFrame frame = (AppFrame) appFrameClass.newInstance();
+        try {
+            final AppFrame frame = (AppFrame) appFrameClass.getConstructor().newInstance();
             frame.setTitle(appName);
             frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-            java.awt.EventQueue.invokeLater(new Runnable()
-            {
-                public void run()
-                {
-                    frame.setVisible(true);
-                }
+            java.awt.EventQueue.invokeLater(() -> {
+                frame.setVisible(true);
             });
 
             return frame;
-        }
-        catch (Exception e)
-        {
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
         }
     }
 
-    public static void main(String[] args)
-    {
+    public static void main(String[] args) {
         // Call the static start method like this from the main method of your derived class.
         // Substitute your application's name for the first argument.
         ApplicationTemplate.start("WorldWind Application", AppFrame.class);
